--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -173,7 +173,7 @@
                     Обновления
                 </span>
             </a>
-            <a href="/пфьуы/" aria-label="Открыть статьи игр" class="header--mobile-item fs-4">
+            <a href="/games/" aria-label="Открыть статьи игр" class="header--mobile-item fs-4">
                 <span class="d-flex flex-wrap align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
                         viewBox="0 0 16 16">
