--- a/src/html/games/sweetness/index.html
+++ b/src/html/games/sweetness/index.html
@@ -67,8 +67,8 @@
         </div>
 
         <div class="container--post post--more">
-            <p class="post--more-text mb-0">Текст написан с помощью технологии GPT-4.
-            </p>
+            <p class="post--more-text mb-0">Текст написан с помощью технологии GPT-4.</p>
+            <p class="post--more-text mb-0">19.03.23 12:00</p>
         </div>
 
         @@include('../../../parts/p--more-2.html', {
