--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -166,6 +166,7 @@
             <p class="post--more-text mb-0">Автор:
                 <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
             </p>
+            <p class="post--more-text mb-0">06.02.23 12:00</p>
         </div>
 
         @@include('../../../parts/p--more-2.html', {
