--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -14,6 +14,14 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
+            <a href="/updates/change-creagoo-ru-simplify-improve-and-share" class="card card--link card--rounded border-0">
+                <img src="/img/updates/creagoo.jpg" loading="lazy" class="card-img" alt="Фотография логотипа Creagoo">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Упрощение, улучшение и «Поделиться»</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
             <a href="/games/sweetness" class="card card--link card--rounded border-0">
                 <img src="/img/posts/g003/cap.jpg" class="card-img" alt="Мобильная игра Sweetness">
                 <div class="card-img-overlay card--bg-gradient d-flex">
