--- a/src/html/games/babkaonthehuntclassic/index.html
+++ b/src/html/games/babkaonthehuntclassic/index.html
@@ -71,6 +71,7 @@
 
         <div class="container--post post--more">
             <p class="post--more-text mb-0">Текст написан с помощью технологии GPT-4.</p>
+            <p class="post--more-text mb-0">19.03.23 12:00</p>
         </div>
 
         @@include('../../../parts/p--more-1.html', {
