--- a/src/html/p/how-I-fight-against-burnout/index.html
+++ b/src/html/p/how-I-fight-against-burnout/index.html
@@ -88,6 +88,7 @@
             <p class="post--more-text mb-0">Автор:
                 <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
             </p>
+            <p class="post--more-text mb-0">02.02.23 12:00</p>
         </div>
 
         @@include('../../../parts/p--more-1.html', {
