--- a/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
+++ b/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
@@ -118,6 +118,7 @@
             <p class="post--more-text mb-0">Автор:
                 <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
             </p>
+            <p class="post--more-text mb-0">06.02.23 12:00</p>
         </div>
 
         @@include('../../../parts/p--more-3.html', {
