--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -134,6 +134,7 @@
             <p class="post--more-text mb-0">Автор:
                 <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
             </p>
+            <p class="post--more-text mb-0">01.01.23 12:00</p>
         </div>
 
         @@include('../../../parts/p--more-3.html', {
