--- a/src/html/updates/novyy-sayt-creagoo-ru/index.html
+++ b/src/html/updates/novyy-sayt-creagoo-ru/index.html
@@ -148,6 +148,7 @@
             <p class="post--more-text mb-0">Автор:
                 <a href="/author/daniildybka" class="link-muted">Даниил Дыбка</a>
             </p>
+            <p class="post--more-text mb-0">19.03.23 12:00</p>
         </div>
 
         @@include('../../../parts/p--more-1.html', {
