--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -23,7 +23,7 @@
                 <div class="col-md-2 footer--adaptive-bottom-1">
                     <p class="card--title fs-4 mb-2 text-start">Читайте
                         <a href="/" aria-label="Перейти на главную страницу"
-                        class="text-decoration-none card--title text-dark link">
+                        class="text-decoration-none card--title  link">
                             Special
                         </a>
                     </p>
