--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -121,7 +121,7 @@
     </div>
 </header>
 
-<div class="offcanvas canvas-bg offcanvas-end" tabindex="-1" style="width: 550px" id="mobileMenu"
+<div class="offcanvas canvas-bg offcanvas-end" tabindex="-1" style="width: 550px; background-image: var(--bg-image);" id="mobileMenu"
     aria-labelledby="mobileMenuLabel">
     <div class="offcanvas-header pt-4">
         <div class="offcanvas-title">
