--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -22,6 +22,14 @@
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
+            <a href="/p/ipad-mini-4-is-an-ambiguous-device" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p011.jpg" class="card-img" alt="Фотография айпада мини 4">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">iPad mini 4 — неоднозначный девайс</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
             <a href="/games/sweetness" class="card card--link card--rounded border-0">
                 <img src="/img/posts/g003/cap.jpg" class="card-img" alt="Мобильная игра Sweetness">
                 <div class="card-img-overlay card--bg-gradient d-flex">
