work at site news dybka ru

--- a/src/html/more/index.html
+++ b/src/html/more/index.html
@@ -26,44 +26,49 @@
     <main class="container container--main">
 
         <div style="margin-bottom: 50px">
-            <h1>Все статьи</h1>
-            <ul>
-                <li>
-                    <a href="#" class="link">Название статьи</a>
-                </li>
+            <h1>Статьи</h1>
+            <ul class="fs-4">
+                <li><a href="#" class="link">Как успешно продавать на Б/У рынках</a></li>
+                <li><a href="#" class="link">Общение с клиентами в интернете</a></li>
+                <li><a href="#" class="link">Б/У рынок: что это, с чем его едят?</a></li>
+                <li><a href="#" class="link">Путь программиста — это трудный путь?</a></li>
+                <li><a href="#" class="link">История live.creagoo.ru — вынужденное закрытие</a></li>
+                <li><a href="#" class="link">С чего я начал изучать программирование</a></li>
+                <li><a href="#" class="link">Как я борюсь против выгорания</a></li>
+                <li><a href="#" class="link">Как я разрабатываю сайты на PHP</a></li>
+                <li><a href="#" class="link">Разработка pet-проектов — что это и для чего?</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
             <h1>Обновления</h1>
-            <ul>
-                <li>
-                    <a href="#" class="link">Название статьи</a>
-                </li>
+            <ul class="fs-4">
+                <li><a href="#" class="link">Упрощение, улучшение и «Поделиться»</a></li>
+                <li><a href="#" class="link">Новый сайт creagoo.ru</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
             <h1>Игры</h1>
-            <ul>
-                <li>
-                    <a href="#" class="link">Название статьи</a>
-                </li>
+            <ul class="fs-4">
+                <li><a href="#" class="link">Babka On The Hunt</a></li>
+                <li><a href="#" class="link">Sweetness</a></li>
+                <li><a href="#" class="link">Запомни эти карты</a></li>
+                <li><a href="#" class="link">Камень ножницы бумага</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
             <h1>Техника</h1>
-            <ul>
-                <li>
-                    <a href="#" class="link">Название статьи</a>
-                </li>
+            <ul class="fs-4">
+                <li><a href="#" class="link">Обзор на макбук 2017 года</a></li>
+                <li><a href="#" class="link">Разница в макбуках за 3 года</a></li>
+                <li><a href="#" class="link">iPad mini 4 — неоднозначный девайс</a></li>
+                <li><a href="#" class="link">Новое поколение устройства — iPhome XR</a></li>
+                <li><a href="#" class="link">Macbook Pro 2014 13' — обзор</a></li>
+                <li><a href="#" class="link">Опыт использования iPhone 6s в течение полугода</a></li>
             </ul>
         </div>
         <div style="margin-bottom: 50px">
-            <h1>Архив</h1>
-            <ul>
-                <li>
-                    <a href="#" class="link">Название статьи</a>
-                </li>
-            </ul>
+            <h2>Архив</h2>
+            <p>Пока что нет статей</p>
         </div>
 
     </main>
