--- a/src/parts/p--daniildybka.html
+++ b/src/parts/p--daniildybka.html
@@ -1,6 +1,47 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
+            <a href="/tech/obzor-na-makbuk-2017-goda" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p013/cap.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Обзор на макбук 2017 года</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/tech/raznitsa-v-makbukakh-za-3-goda" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p017/cap.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Разница в макбуках за 3 года</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/kak-uspeshno-prodavat-na-bu-rynkakh" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p016/cap.jpg" class="card-img" alt="Портмоне на фоне ноутбука">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Как успешно продавать на Б/У рынках
+                    </p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/obshcheniye-s-kliyentami-v-internete" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p015/cap.jpg" class="card-img" alt="Открытая почта">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Общение с клиентами в интернете</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/bu-rynok-chto-eto-s-chem-yego-yedyat" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p012/cap.jpg" class="card-img" alt="Несколько купюр денег в руке">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Б/У рынок: что это, с чем его едят?</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
             <a href="/p/the-path-of-a-programmer-is-a-difficult-path" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p001@min.jpg" class="card-img" alt="Ноутбук с открытой крышкой">
                 <div class="card-img-overlay card--bg-gradient d-flex">
@@ -57,7 +98,7 @@
                 <img src="/img/posts/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства —
-                        iPhone XR</p>
+                        iPhome XR</p>
                 </div>
             </a>
         </div>
@@ -81,7 +122,7 @@
             <a href="/p/pet-project-development-what-is-it-and-for-what" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p010.jpg" loading="lazy" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов - что это
+                    <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов — что это
                         и для чего?</p>
                 </div>
             </a>
