--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -1,10 +1,10 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
         <div class="col pb-3 mb-sm-0">
-            <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g001/cap.jpg" class="card-img" alt="Мобильная игра Babka On The Hunt">
+            <a href="/tech/obzor-na-makbuk-2017-goda" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p013/cap.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-1">Babka On The Hunt</p>
+                    <p class="card-title text-white mt-auto card--title card--title-1">Обзор на макбук 2017 года</p>
                 </div>
             </a>
         </div>
@@ -14,10 +14,51 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
-            <a href="/updates/change-creagoo-ru-simplify-improve-and-share" class="card card--link card--rounded border-0">
-                <img src="/img/updates/creagoo.jpg" loading="lazy" class="card-img" alt="Фотография логотипа Creagoo">
+            <a href="/p/kakiye-makbuki-deystvitelno-stoit-brat" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p014/cap.jpg" class="card-img" alt="Два макбука на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Упрощение, улучшение и «Поделиться»</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Какие макбуки действительно стоит брать?</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/kak-uspeshno-prodavat-na-bu-rynkakh" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p016/cap.jpg" class="card-img" alt="Портмоне на фоне ноутбука">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Как успешно продавать на Б/У рынках
+                    </p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/tech/raznitsa-v-makbukakh-za-3-goda" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p017/cap.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Разница в макбуках за 3 года</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/obshcheniye-s-kliyentami-v-internete" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p015/cap.jpg" class="card-img" alt="Открытая почта">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Общение с клиентами в интернете</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/p/bu-rynok-chto-eto-s-chem-yego-yedyat" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p012/cap.jpg" class="card-img" alt="Несколько купюр денег в руке">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Б/У рынок: что это, с чем его едят?</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/games/babkaonthehuntclassic" class="card card--link card--rounded border-0">
+                <img src="/img/posts/g001/cap.jpg" class="card-img" alt="Мобильная игра Babka On The Hunt">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Babka On The Hunt</p>
                 </div>
             </a>
         </div>
@@ -30,26 +71,10 @@
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/games/sweetness" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g003/cap.jpg" class="card-img" alt="Мобильная игра Sweetness">
-                <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Sweetness</p>
-                </div>
-            </a>
-        </div>
-        <div class="col pb-3 mb-sm-0">
             <a href="/games/rememberthesecards" class="card card--link card--rounded border-0">
                 <img src="/img/posts/g002/cap.jpg" class="card-img" alt="Мобильная игра Запомни эти карты">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Запомни эти карты</p>
-                </div>
-            </a>
-        </div>
-        <div class="col pb-3 mb-sm-0">
-            <a href="/games/rockpaperscissors" class="card card--link card--rounded border-0">
-                <img src="/img/posts/g004/cap.jpg" loading="lazy" class="card-img" alt="Мобильная игра Камень ножницы бумага">
-                <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Камень ножницы бумага</p>
                 </div>
             </a>
         </div>
@@ -65,31 +90,7 @@
             <a href="/tech/the-new-generation-of-the-iphone-xr-device" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства — iPhone XR</p>
-                </div>
-            </a>
-        </div>
-        <div class="col pb-3 mb-sm-0">
-            <a href="/tech/macbook-pro-2014-13-review" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p008.jpg" loading="lazy" class="card-img" alt="Приоткрытая крышка ноутбука">
-                <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Macbook Pro 2014 13' — обзор</p>
-                </div>
-            </a>
-        </div>
-        <div class="col pb-3 mb-sm-0">
-            <a href="/tech/experience-using-iphone-6s-for-six-months" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p009.jpg" loading="lazy" class="card-img" alt="Телефон снимает фотографию">
-                <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Опыт использования iPhone 6s</p>
-                </div>
-            </a>
-        </div>
-        <div class="col pb-3 mb-sm-0">
-            <a href="/p/pet-project-development-what-is-it-and-for-what" class="card card--link card--rounded border-0">
-                <img src="/img/posts/p010.jpg" loading="lazy" class="card-img" alt="Открытый код программы">
-                <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов - что это и для чего?</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства — iPhome XR</p>
                 </div>
             </a>
         </div>
