--- a/src/parts/p--more-2.html
+++ b/src/parts/p--more-2.html
@@ -8,7 +8,7 @@
                 <img src="/img/posts/p007.jpg" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства —
-                        iPhone XR</p>
+                        iPhome XR</p>
                 </div>
             </a>
         </div>
@@ -41,7 +41,7 @@
             <a href="/p/pet-project-development-what-is-it-and-for-what" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p010.jpg" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов - что это
+                    <p class="card-title text-white mt-auto card--title card--title-2">Разработка pet-проектов — что это
                         и для чего?</p>
                 </div>
             </a>
