--- a/src/parts/p--tech.html
+++ b/src/parts/p--tech.html
@@ -1,6 +1,22 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
+            <a href="/tech/obzor-na-makbuk-2017-goda" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p013/cap.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Обзор на макбук 2017 года</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
+            <a href="/tech/raznitsa-v-makbukakh-za-3-goda" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p017/cap.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Разница в макбуках за 3 года</p>
+                </div>
+            </a>
+        </div>
+        <div class="col pb-3 mb-sm-0">
             <a href="/tech/ipad-mini-4-is-an-ambiguous-device" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p011.jpg" class="card-img" alt="Фотография айпада мини 4">
                 <div class="card-img-overlay card--bg-gradient d-flex">
@@ -14,7 +30,7 @@
                 <img src="/img/posts/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства —
-                        iPhone XR</p>
+                        iPhome XR</p>
                 </div>
             </a>
         </div>
