work at mobile view

--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -20,6 +20,17 @@
             <h1>Обновления Special</h1>
         </div>
         <div class="fs-5 mb-5">
+            <p class="text--more fs-6">Изменения 16.04.2023</p>
+            <ul>
+                <li>Обновлен интерфейс</li>
+                <li>Многоязычность сайта</li>
+                <li>Новые статьи на русском</li>
+                <li>Активная поддержка сайта</li>
+                <li>Открытый код платформы</li>
+                <li>Новые категории.</li>
+            </ul>
+        </div>
+        <div class="fs-5 mb-5">
             <p class="text--more fs-6">Изменения 19.03.23</p>
             <ul>
                 <li>Улучшено визуальное состовляющее</li>
