--- a/src/html/about.html
+++ b/src/html/about.html
@@ -117,10 +117,10 @@
             </p>
         </div>
         <div class="fs-5 mb-5">
-            <h2>Безопастность сайта</h2>
+            <h2>Безопасность сайта</h2>
             <p>
                 Доменный адрес использует защищенный протокол подключения. Используется SSL-сертификат для
-                безопастного и быстрого подключения и получения информации. Страницы сайта формируются
+                безопасного и быстрого подключения и получения информации. Страницы сайта формируются
                 до публикации и являются «статическими».
             </p>
         </div>
@@ -150,6 +150,17 @@
             </p>
         </div>
         <div class="fs-5 mb-5">
+            <h2>Поддержать проект</h2>
+            <p>
+                Поддержать проект вы можете одним из способов: написать сообщение автору
+                (<a href="//t.me/ddybka" class="link" target="_blank">@ddybka</a>),
+                написать статью для Special (<a href="/write-post.html" class="link">Как?</a>).
+            </p>
+            <p>
+                Ссылка на репозиторий GitHub: <a href="//github.com/DanyaBooba/special-gulp-2023" class="link" target="_blank">Открыть</a>
+            </p>
+        </div>
+        <div class="fs-5 mb-5">
             <h2>Исходники</h2>
             <ul>
                 <li><a href="/download/special-dark.zip" class="link">Логотип черный</a></li>
@@ -168,7 +179,7 @@
         <div class="fs-5 mb-5">
             <h2>Автор</h2>
             <p>
-                Сайт разрабатывается Даниилом Дыбка (<a href="//dybka.ru" target="_blank"class="link">dybka.ru</a>) с 15.01.2022 года.
+                Сайт разрабатывается Даниилом Дыбка (<a href="//dybka.ru" target="_blank"class="link">dybka.ru</a>) с 15.01.2022.
             </p>
         </div>
     </main>
