--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -20,7 +20,7 @@
     <div class="container container--main">
         <div class="container mb-4 text-center">
             <div class="d-flex footer--adaptive-bottom flex-wrap">
-                <div class="col-md-2 footer--adaptive-bottom-1">
+                <div class="col-md-2 footer--adaptive-bottom-1 footer--adaptive-nav">
                     <p class="card--title fs-4 mb-2 text-start">Читайте
                         <a href="/" aria-label="Перейти на главную страницу"
                         class="text-decoration-none card--title  link">
@@ -79,27 +79,27 @@
                 </div>
             </div>
         </div>
-        <div class="container header--adaptive-nav mb-3 text-center">
+        <div class="container footer--adaptive-nav mb-3 text-center">
             <div class="row row-cols-1 fs-6 row-cols-lg-4 g-2 g-lg-3 align-items-center">
-                <div class="col header--adaptive-nav">
+                <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
                         <div><a href="/about.html" class="footer--more-link">О проекте</a></div>
                         <div><a href="/privacy/" class="footer--more-link">Пользователю</a></div>
                     </div>
                 </div>
-                <div class="col header--adaptive-nav">
+                <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
                         <div><a href="/updates.html" class="footer--more-link">Обновления</a></div>
                         <div><a href="/translate.html" class="footer--more-link">Перевод сайта</a></div>
                     </div>
                 </div>
-                <div class="col header--adaptive-nav">
+                <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
                         <div><a href="/rss.xml" class="footer--more-link">RSS статей</a></div>
                         <div><a href="/write-post.html" class="footer--more-link">Написать статью</a></div>
                     </div>
                 </div>
-                <div class="col header--adaptive-nav">
+                <div class="col footer--adaptive-nav">
                     <div class="d-flex flex-wrap flex-column">
                         <div><a href="mailto:daniil@dybka.ru" class="footer--more-link">daniil@dybka.ru</a></div>
                         <div><a href="//dybka.ru" target="_blank" class="footer--more-link">Проект от dybka.ru</a></div>
