--- a/src/html/games/babkaonthehuntclassic/index.html
+++ b/src/html/games/babkaonthehuntclassic/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Babka On The Hunt: 2D Классика</h1>
             <p class="post--start-p">Описание лучшей мобильной игры.</p>
         </div>
