--- a/src/html/games/rememberthesecards/index.html
+++ b/src/html/games/rememberthesecards/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Запомни эти карты</h1>
             <p class="post--start-p">Первая игра для тренировки памяти.</p>
         </div>
