--- a/src/html/games/rockpaperscissors/index.html
+++ b/src/html/games/rockpaperscissors/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Камень ножницы бумага</h1>
             <p class="post--start-p">Соревнуйся с друзьями уже сейчас.</p>
         </div>
