--- a/src/html/games/sweetness/index.html
+++ b/src/html/games/sweetness/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Sweetness</h1>
             <p class="post--start-p">Ну очень красивая мобильная игра.</p>
         </div>
