--- a/src/html/p/bu-rynok-chto-eto-s-chem-yego-yedyat/index.html
+++ b/src/html/p/bu-rynok-chto-eto-s-chem-yego-yedyat/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Б/У рынок: что это, с чем его едят?</h1>
             <p class="post--start-p">Ни с чем не едят, а лишь покупают технику.</p>
         </div>
