--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Как я разрабатываю сайты на PHP</h1>
             <p class="post--start-p">Небольшой гайд.</p>
         </div>
