--- a/src/html/p/how-I-fight-against-burnout/index.html
+++ b/src/html/p/how-I-fight-against-burnout/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Как я борюсь против выгорания</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
         </div>
