--- a/src/html/p/how-did-I-start-learning-programming/index.html
+++ b/src/html/p/how-did-I-start-learning-programming/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>С чего я начал изучать программирование</h1>
             <p class="post--start-p">Постараюсь ответить на этот вопрос.</p>
         </div>
