--- a/src/html/p/kak-uspeshno-prodavat-na-bu-rynkakh/index.html
+++ b/src/html/p/kak-uspeshno-prodavat-na-bu-rynkakh/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Как успешно продавать на Б/У рынках</h1>
             <p class="post--start-p">Разберем все по полочкам с примерами из жизни.</p>
         </div>
