--- a/src/html/p/kakiye-makbuki-deystvitelno-stoit-brat/index.html
+++ b/src/html/p/kakiye-makbuki-deystvitelno-stoit-brat/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Какие макбуки действительно стоит брать?</h1>
             <p class="post--start-p">Топ-3 лучших макбуков с почти личным использованием.</p>
         </div>
