--- a/src/html/p/obshcheniye-s-kliyentami-v-internete/index.html
+++ b/src/html/p/obshcheniye-s-kliyentami-v-internete/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Общение с клиентами в интернете</h1>
             <p class="post--start-p">Действительно важно для успешных продаж.</p>
         </div>
