--- a/src/html/tech/experience-using-iphone-6s-for-six-months/index.html
+++ b/src/html/tech/experience-using-iphone-6s-for-six-months/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Опыт использования iPhone 6s в течение полугода</h1>
             <p class="post--start-p">Мой первый айфон.</p>
         </div>
