--- a/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
+++ b/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>iPad mini 4 — неоднозначный девайс</h1>
             <p class="post--start-p">Но почему же.</p>
         </div>
