--- a/src/html/tech/macbook-pro-2014-13-review/index.html
+++ b/src/html/tech/macbook-pro-2014-13-review/index.html
@@ -15,7 +15,7 @@
         @@include('../../../parts/p--font-size.html', {
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Macbook Pro 2014 13' — обзор</h1>
             <p class="post--start-p">Мое самое любимое устройство.</p>
         </div>
