--- a/src/html/tech/obzor-na-makbuk-2017-goda/index.html
+++ b/src/html/tech/obzor-na-makbuk-2017-goda/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Обзор на макбук 2017 года</h1>
             <p class="post--start-p">Обновление моего макбука.</p>
         </div>
