--- a/src/html/tech/raznitsa-v-makbukakh-za-3-goda/index.html
+++ b/src/html/tech/raznitsa-v-makbukakh-za-3-goda/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Разница в макбуках за 3 года</h1>
             <p class="post--start-p">Сравнение макбука 2014 и 2017 года</p>
         </div>
