--- a/src/html/tech/the-new-generation-of-the-iphone-xr-device/index.html
+++ b/src/html/tech/the-new-generation-of-the-iphone-xr-device/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Новое поколение устройства — iPhome XR</h1>
             <p class="post--start-p">История, как полюбил iPhome XR</p>
         </div>
