--- a/src/html/updates/change-creagoo-ru-simplify-improve-and-share/index.html
+++ b/src/html/updates/change-creagoo-ru-simplify-improve-and-share/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Изменение creagoo.ru — Упрощение, улучшение и «Поделиться»</h1>
             <p class="post--start-p">Крутое обновление 25.03.23.</p>
         </div>
