--- a/src/html/updates/novyy-sayt-creagoo-ru/index.html
+++ b/src/html/updates/novyy-sayt-creagoo-ru/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Новый сайт creagoo.ru</h1>
             <p class="post--start-p">Разработанный без PHP, но с Gulp'ом.</p>
         </div>
