--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post ">
+        <div class="container--post-head ">
             <h1>Путь программиста — это трудный путь?</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
         </div>
