work at new format post

--- a/src/html/more/index.html
+++ b/src/html/more/index.html
@@ -61,7 +61,7 @@
                 <li><a href="#" class="link">Обзор на макбук 2017 года</a></li>
                 <li><a href="#" class="link">Разница в макбуках за 3 года</a></li>
                 <li><a href="#" class="link">iPad mini 4 — неоднозначный девайс</a></li>
-                <li><a href="#" class="link">Новое поколение устройства — iPhome XR</a></li>
+                <li><a href="#" class="link">Новое поколение устройства — iPhone XR</a></li>
                 <li><a href="#" class="link">Macbook Pro 2014 13' — обзор</a></li>
                 <li><a href="#" class="link">Опыт использования iPhone 6s в течение полугода</a></li>
             </ul>
