--- a/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
+++ b/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": ""
+"title": "История разработки проекта live.creagoo.ru — его вынужденное закрытие"
 })
 <link rel="stylesheet" href="/css/page.css">
 
@@ -16,7 +16,7 @@
 
         })
 
-        <div class="container--post">
+        <div class="container--post container--post-head">
             <h1>История разработки проекта live.creagoo.ru — его вынужденное закрытие</h1>
             <p class="post--start-p">live.creagoo.ru должен был заменить основной сайт Creagoo.</p>
         </div>
