--- a/src/html/tech/experience-using-iphone-6s-for-six-months/index.html
+++ b/src/html/tech/experience-using-iphone-6s-for-six-months/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": ""
+"title": "Опыт использования iPhone 6s в течение полугода"
 })
 <link rel="stylesheet" href="/css/page.css">
 
