--- a/src/html/tech/the-new-generation-of-the-iphone-xr-device/index.html
+++ b/src/html/tech/the-new-generation-of-the-iphone-xr-device/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": ""
+"title": "Новое поколение устройства — iPhone XR"
 })
 <link rel="stylesheet" href="/css/page.css">
 
@@ -17,8 +17,8 @@
         })
 
         <div class="container--post-head ">
-            <h1>Новое поколение устройства — iPhome XR</h1>
-            <p class="post--start-p">История, как полюбил iPhome XR</p>
+            <h1>Новое поколение устройства — iPhone XR</h1>
+            <p class="post--start-p">История, как полюбил iPhone XR</p>
         </div>
 
         <figure class="post--start-img text-center">
@@ -28,11 +28,11 @@
 
         <div class="container--post">
             <p>
-                Мне всегда было интересно опробовать новое устройство от Apple и мой выбор пал именно на iPhome XR в связи с его
+                Мне всегда было интересно опробовать новое устройство от Apple и мой выбор пал именно на iPhone XR в связи с его
                 популярностью и удобством.
             </p>
             <p>
-                У меня получилось так, что я перешел на iPhome XR с 6s, и моему удивлению не было предела!
+                У меня получилось так, что я перешел на iPhone XR с 6s, и моему удивлению не было предела!
             </p>
             <h3>Удобства</h3>
             <p>
@@ -61,7 +61,7 @@
                 Челка не мешает просмотру содержимого. В любом случае, с ее помощью мы видим больше содержимого, потому что сбоку от
                 челки помещается техническая информация.
             </p>
-            <h3>Почему именно iPhome XR</h3>
+            <h3>Почему именно iPhone XR</h3>
             <p>
                 Да, существует SE, 11 и 12. Но мой выбор пал на Xr из-за максимального количества плюсов и минимальной цены на аппарат.
                 На текущий момент рыночная цена устройства 16.000 рублей, в эту цену входит 100% цены телефона. И это прекрасно.
@@ -76,7 +76,7 @@
             </p>
             <p>
                 Я уж не стану тут говорить, для каких задач может подойти Xr, потому что, я думаю, что каждый может сам понять для себя,
-                что ему нужно. В случае с iPhome XR — на данном аппарате можно выполнять все, без исключения, и получать от этого
+                что ему нужно. В случае с iPhone XR — на данном аппарате можно выполнять все, без исключения, и получать от этого
                 удовольствие.
             </p>
             <p>
