--- a/src/html/updates/change-creagoo-ru-simplify-improve-and-share/index.html
+++ b/src/html/updates/change-creagoo-ru-simplify-improve-and-share/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": ""
+"title": "Изменение creagoo.ru — Упрощение, улучшение и «Поделиться»"
 })
 <link rel="stylesheet" href="/css/page.css">
 
