--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="col">
                             <div>
-                                <a href="//dzen.ru/specialnews?share_to=link" target="_blank" class="footer--icon-link"
+                                <a href="//dzen.ru/news.dybka.ru" target="_blank" class="footer--icon-link"
                                     aria-label="Открыть медиа Спешиал в Яндекс Дзене">
                                     <svg width="64" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="footer-icon-dzen">
                                         <path
