--- a/src/parts/p--more-1.html
+++ b/src/parts/p--more-1.html
@@ -42,7 +42,7 @@
                 <img src="/img/posts/p007.jpg" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства —
-                        iPhome XR</p>
+                        iPhone XR</p>
                 </div>
             </a>
         </div>
