--- a/src/html/p/how-did-I-start-learning-programming/index.html
+++ b/src/html/p/how-did-I-start-learning-programming/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": ""
+"title": "С чего я начал изучать программирование"
 })
 <link rel="stylesheet" href="/css/page.css">
 
