--- a/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
+++ b/src/html/tech/ipad-mini-4-is-an-ambiguous-device/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": ""
+"title": "iPad mini 4 — неоднозначный девайс"
 })
 <link rel="stylesheet" href="/css/page.css">
 
