--- a/src/html/tech/macbook-pro-2014-13-review/index.html
+++ b/src/html/tech/macbook-pro-2014-13-review/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": ""
+"title": "Macbook Pro 2014 13' — обзор"
 })
 <link rel="stylesheet" href="/css/page.css">
 
