--- a/src/html/updates/novyy-sayt-creagoo-ru/index.html
+++ b/src/html/updates/novyy-sayt-creagoo-ru/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('../../../parts/head.html', {
-"title": ""
+"title": "Новый сайт creagoo.ru"
 })
 <link rel="stylesheet" href="/css/page.css">
 
