--- a/src/parts/p--font-size.html
+++ b/src/parts/p--font-size.html
@@ -1,4 +1,4 @@
-<div class="container container--post">
+<div class="container container--post" style="margin-bottom: 30px">
     <div class="d-flex justify-content-end align-items-center">
         <div>
             <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
