--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -1,7 +1,7 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-1 gx-2 g-lg-3">
         <div class="col pb-3 mb-sm-0">
-            <a href="/tech/obzor-na-makbuk-2017-goda" class="card card--link card--rounded border-0">
+            <a href="/tech/macbook-2017-review" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p013/cap.jpg" class="card-img" alt="Макбук 2017 года с открытой крышкой">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-1">Обзор на макбук 2017 года</p>
@@ -14,7 +14,7 @@
 <div class="container container--main">
     <div class="row row-cols-1 row-cols-lg-2 gx-3">
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/kakiye-makbuki-deystvitelno-stoit-brat" class="card card--link card--rounded border-0">
+            <a href="/p/which-macbooks-are-really-worth-getting" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p014/cap.jpg" class="card-img" alt="Два макбука на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Какие макбуки действительно стоит брать?</p>
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/kak-uspeshno-prodavat-na-bu-rynkakh" class="card card--link card--rounded border-0">
+            <a href="/p/how-to-sell-on-buy-markets" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p016/cap.jpg" class="card-img" alt="Портмоне на фоне ноутбука">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Как успешно продавать на Б/У рынках
@@ -31,7 +31,7 @@
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/tech/raznitsa-v-makbukakh-za-3-goda" class="card card--link card--rounded border-0">
+            <a href="/tech/difference-in-macbooks-for-3-years" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p017/cap.jpg" class="card-img" alt="Макбук 2017 и 2014 стоят напротив">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Разница в макбуках за 3 года</p>
@@ -39,7 +39,7 @@
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/obshcheniye-s-kliyentami-v-internete" class="card card--link card--rounded border-0">
+            <a href="/p/communication-with-clients-on-the-internet" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p015/cap.jpg" class="card-img" alt="Открытая почта">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Общение с клиентами в интернете</p>
@@ -47,7 +47,7 @@
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/bu-rynok-chto-eto-s-chem-yego-yedyat" class="card card--link card--rounded border-0">
+            <a href="/p/used-market-what-is-it-with-what-it-is-eaten" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p012/cap.jpg" class="card-img" alt="Несколько купюр денег в руке">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Б/У рынок: что это, с чем его едят?</p>
@@ -90,7 +90,7 @@
             <a href="/tech/the-new-generation-of-the-iphone-xr-device" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p007.jpg" loading="lazy" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства — iPhome XR</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства — iPhone XR</p>
                 </div>
             </a>
         </div>
